<resources>
    <string name="app_name">PM1E1206</string>
    <string name="addcontacto">Agregar Contacto</string>
    <string name="listcontacto">Contactos</string>
    <string name="addpais">+</string>
    <string name="botoncompartir">Compartir</string>
    <string name="addimagen">Escoger Imagen</string>
    <string name="addcont">Guardar Contacto</string>
    <string name="verimagen">Ver Imagen</string>
    <string name="eliminarcont">Eliminar Contacto</string>
    <string name="actualizarcont">Actualizar Contacto</string>
    <string name="ejemcod">Ejemplo: +504</string>
    <string name="ejempais">Ejemplo: Honduras</string>
    <string name="savepais">Registrar</string>
    <string name="updatepais">Actualizar</string>
    <string name="eliminarpais">Eliminar</string>
    <string name="atras">Atras ...</string>
</resources>